--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:padding="30dp"
-    android:background="@color/colorBackground"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
