--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -5,11 +5,11 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="6dp"
         android:id="@+id/card_view"
-        card:cardCornerRadius="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,7 +18,7 @@
 
             <RelativeLayout
                 android:id="@+id/re_layout"
-                android:background="@color/colorAccent"
+                android:background="@color/cardBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
+                    android:textColor="#000000"
                     android:padding="10dp" />
 
                 <LinearLayout
@@ -43,16 +44,23 @@
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/colorAccent"
                         android:text="Today"/>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:tint="@color/colorAccent"
                         android:src="@drawable/check"/>
 
                 </LinearLayout>
 
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/lineColor"/>
 
             <TextView
                 android:id="@+id/main_text"
