--- a/app/src/main/res/layout/community_layout.xml
+++ b/app/src/main/res/layout/community_layout.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cardBackground">
 
     <ImageView
         android:padding="16dp"
@@ -12,10 +13,14 @@
         android:layout_height="wrap_content"
         android:src="@drawable/title"/>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp">
+        android:layout_height="1dp"
+        android:background="@color/lineColor"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:padding="8dp"
@@ -80,6 +85,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
