--- a/app/src/main/res/layout/notice_card_layout.xml
+++ b/app/src/main/res/layout/notice_card_layout.xml
@@ -5,22 +5,16 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_margin="6dp"
         android:id="@+id/card_view"
-        card:cardCornerRadius="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/notice_title_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,61 +22,70 @@
                 android:weightSum="2">
 
                 <LinearLayout
-                    android:layout_marginRight="16dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content">
 
                     <ImageView
                         android:layout_gravity="center"
-                        android:id="@+id/imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/calendar" />
-
-                    <TextView
-                        android:id="@+id/date_text"
                         android:padding="10dp"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textColor="@color/colorPrimary"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_gravity="center"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:src="@drawable/writer"/>
 
-                    <TextView
-                        android:id="@+id/writer_text"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:layout_weight="1"
-                        android:textColor="@color/colorPrimary"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:id="@+id/writer_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/date_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#9197a3" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/notice_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:padding="20dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/lineColor"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent">
+                android:background="@color/cardBackground">
 
                 <Button
                     android:id="@+id/in_web_notice_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/simple_button"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:background="@color/cardBackground"
+                    android:textColor="@color/colorAccent"
+                    android:padding="15dp"
+                    android:drawableLeft="@drawable/read_more"
+                    android:drawableTint="@color/colorAccent"
+                    android:drawablePadding="6dp"
                     android:text="본문보기"/>
             </LinearLayout>
 
