--- a/app/src/main/res/layout/notice_fragment.xml
+++ b/app/src/main/res/layout/notice_fragment.xml
@@ -8,10 +8,7 @@
         android:id="@+id/notice_card_view"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_height="match_parent"/>
 
     <ProgressBar
         android:id="@+id/notice_loading"
